# neovim-twitch-chat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  __Scratch__  init.vim  install.sh  test.txt
autoload/: twitchChat.vim
plugin/: twitchChat.vim
src/: args.rs  event.rs  handler.rs  main.rs
