[package]
authors = ["Steve Biedermann"]
name = "neovim-twitch-chat"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.3.7"
simplelog = "0.4.2"
neovim-lib = "0.6.1"
twitch_chat_wrapper = { git = "https://github.com/hardliner66/twitch_chat_wrapper", branch = "eof_crash_workaround" }
dotenv = "0.15.0"
