[package]
authors = ["Steve Biedermann"]
name = "neovim-twitch-chat"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.3.7"
simplelog = "0.4.2"
neovim-lib = "0.6.1"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
twitch-irc = "2.2.0"
dotenv = "0.15.0"
