[package]
authors = ["hardliner66 <hardliner66@gmail.com>"]
name = "neovim-twitch-chat"
description = "A neovim plugin to send messages to twitch"
version = "1.0.3-alpha.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hardliner66/twitch-send"
readme = "README.md"

[dependencies]
log = "0.4.14"
simplelog = "0.9.0"
neovim-lib = "0.6.1"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
twitch-irc = "2.2.0"
dotenv = "0.15.0"
